--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,20 +26,24 @@
         android:id="@+id/aboutFragment"
         android:name="ru.gb.course1.filmssearch.ui.about.AboutFragment"
         android:label="about_fragment"
-        tools:layout="@layout/about_fragment" />
+        tools:layout="@layout/fragment_about" />
     <fragment
         android:id="@+id/moreDetailedFragment"
         android:name="ru.gb.course1.filmssearch.ui.moredetailed.MoreDetailedFragment"
         android:label="more_detailed_fragment"
-        tools:layout="@layout/more_detailed_fragment" />
+        tools:layout="@layout/fragment_more_detailed" />
     <fragment
         android:id="@+id/searchFragment"
         android:name="ru.gb.course1.filmssearch.ui.search.SearchFragment"
         android:label="search_fragment"
-        tools:layout="@layout/search_fragment" />
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_searchFragment_to_moreDetailedFragment"
+            app:destination="@id/moreDetailedFragment" />
+    </fragment>
     <fragment
         android:id="@+id/settingsFragment"
         android:name="ru.gb.course1.filmssearch.ui.settings.SettingsFragment"
         android:label="settings_fragment"
-        tools:layout="@layout/settings_fragment" />
+        tools:layout="@layout/fragment_settings" />
 </navigation>
